# unified_retro_keyboard

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  toc_asdf-v1.6.3-atmega2560.html  toc_asdf-v1.6.3-atmega328p.html  toc_asdf-v1.6.4-atmega1280.html  toc_asdf-v1.6.4-atmega168p.html  toc_asdf-v1.6.4-atmega2560.html  toc_asdf-v1.6.4-atmega328p.html  toc_asdf-v1.6.4-atmega640.html  toc_asdf-v1.6.4-atmega88p.html  toc_asdf-v1.6.5-atmega1280.html  toc_asdf-v1.6.5-atmega168p.html  toc_asdf-v1.6.5-atmega2560.html  toc_asdf-v1.6.5-atmega328p.html  toc_asdf-v1.6.5-atmega640.html  toc_asdf-v1.6.5-atmega88p.html
.doctrees/: environment.pickle  index.doctree  toc_asdf-v1.6.3-atmega2560.doctree  toc_asdf-v1.6.3-atmega328p.doctree  toc_asdf-v1.6.4-atmega1280.doctree  toc_asdf-v1.6.4-atmega168p.doctree  toc_asdf-v1.6.4-atmega2560.doctree  toc_asdf-v1.6.4-atmega328p.doctree  toc_asdf-v1.6.4-atmega640.doctree  toc_asdf-v1.6.4-atmega88p.doctree  toc_asdf-v1.6.5-atmega1280.doctree  toc_asdf-v1.6.5-atmega168p.doctree  toc_asdf-v1.6.5-atmega2560.doctree  toc_asdf-v1.6.5-atmega328p.doctree  toc_asdf-v1.6.5-atmega640.doctree  toc_asdf-v1.6.5-atmega88p.doctree
.github/workflows/: asdf-firmware.yml
_downloads/2b21857c973688c3377b44010d7cd1ad/: asdf-v1.6.5-atmega640.hex
_downloads/47bcbbd672531ba0b7786b7ba2ebeadf/: asdf-v1.6.5-atmega1280.hex
_downloads/526cee5e9b1702023fe7bfe17dbc4930/: asdf-v1.6.5-atmega88p.hex
_downloads/53ef8677ea34353455307a9fc127ca2e/: asdf-v1.6.5-atmega328p.hex
_downloads/58e81e806f53fe098fa21613d589a745/: asdf-v1.6.4-atmega328p.hex
_downloads/820e961049e4412e4525a4b33993a665/: asdf-v1.6.4-atmega168p.hex
_downloads/970a7b0a34f4ae8cee59e4b1a8dd17a3/: asdf-v1.6.4-atmega640.hex
_downloads/a1f7290df4d1b8df7b6867e677447673/: asdf-v1.6.4-atmega1280.hex
_downloads/a3d6e7f638dce35aea765c4fad767321/: asdf-v1.6.3-atmega2560.hex
_downloads/a619c96fdfe1db6b4e7a1e2f43da7879/: asdf-v1.6.5-atmega2560.hex
_downloads/b6ee7cc9a360e72f93ebfd471459d8df/: asdf-v1.6.5-atmega168p.hex
_downloads/eb6de0f231d602021d1df081731cbecb/: asdf-v1.6.3-atmega328p.hex
_downloads/ed5cd25ff2c122719294d3387f46af00/: asdf-v1.6.4-atmega2560.hex
_downloads/fdcffdce5b42b95e82b0137b68bb057e/: asdf-v1.6.4-atmega88p.hex
_sources/: index.rst.txt  toc_asdf-v1.6.3-atmega2560.rst.txt  toc_asdf-v1.6.3-atmega328p.rst.txt  toc_asdf-v1.6.4-atmega1280.rst.txt  toc_asdf-v1.6.4-atmega168p.rst.txt  toc_asdf-v1.6.4-atmega2560.rst.txt  toc_asdf-v1.6.4-atmega328p.rst.txt  toc_asdf-v1.6.4-atmega640.rst.txt  toc_asdf-v1.6.4-atmega88p.rst.txt  toc_asdf-v1.6.5-atmega1280.rst.txt  toc_asdf-v1.6.5-atmega168p.rst.txt  toc_asdf-v1.6.5-atmega2560.rst.txt  toc_asdf-v1.6.5-atmega328p.rst.txt  toc_asdf-v1.6.5-atmega640.rst.txt  toc_asdf-v1.6.5-atmega88p.rst.txt
firmware/: asdf2-plan.md
firmware/asdf/: CMakeLists.txt  Pipfile  README.md  eeprom-spec.org  keymap_list.cmake  make-build-dirs.sh  make-targets.sh
firmware/asdf/cmake/: generic-gcc-avr.cmake
firmware/asdf/docs/source/: conf.py
firmware/asdf/docs/source/_templates/: hexfile_link.in  index.rst.in
firmware/asdf/src/: ARCHITECTURE-keymaps.org  CMakeLists.txt  Makefile  Makefile.app  Makefile.atmega2560  Makefile.atmega328p  Makefile.deps  Makefile.test  _clang-format  asdf.c  asdf.h  asdf_actions.c  asdf_actions.h  asdf_arch.c  asdf_ascii.h  asdf_buffer.c  asdf_buffer.h  asdf_config.h  asdf_hook.c  asdf_hook.h  asdf_keymap_defs.h  asdf_keymap_setup.c.in  asdf_keymap_setup.h.in  asdf_keymap_table.c.in  asdf_keymap_table.h.in  asdf_keymaps.c  asdf_keymaps.h  asdf_modifiers.c  asdf_modifiers.h  asdf_physical.c  asdf_physical.h  asdf_print.c  asdf_print.h  asdf_repeat.c  asdf_repeat.h  asdf_virtual.c  asdf_virtual.h  main.c
firmware/asdf/src/Arch/: asdf_arch_atmega2560.c  asdf_arch_atmega2560.h  asdf_arch_atmega328p.c  asdf_arch_atmega328p.h  asdf_arch_test.c  asdf_arch_test.h
firmware/asdf/src/Keymaps/: asdf_all_keymap_defs_production.h  asdf_all_keymap_defs_test.h  asdf_keymap_ace1000.c  asdf_keymap_ace1000.h  asdf_keymap_ace1000_add_map.c  asdf_keymap_ace1000_add_map.h  asdf_keymap_apple2.c  asdf_keymap_apple2.h  asdf_keymap_apple2_add_map.c  asdf_keymap_apple2_add_map.h  asdf_keymap_apple2_caps.c  asdf_keymap_apple2_caps.h  asdf_keymap_classic.c  asdf_keymap_classic.h  asdf_keymap_classic_add_map.c  asdf_keymap_classic_add_map.h  asdf_keymap_classic_caps.c  asdf_keymap_defs_apple2.h  asdf_keymap_defs_ascii.h  asdf_keymap_defs_ascii_swapped_o.h  asdf_keymap_defs_dipswitch.h  asdf_keymap_defs_sol.h  asdf_keymap_defs_template.h  asdf_keymap_defs_test.h  asdf_keymap_defs_test2.h  asdf_keymap_sol.c  asdf_keymap_sol.h  asdf_keymaps_ascii.h  asdf_keymaps_ascii_swapped_o.h  asdf_keymaps_test.h
firmware/asdf/src/Templates/: function.c  template.c  template.h
firmware/asdf/test/: CmakeLists.txt  asdf_keymap_defs_test.h  asdf_keymap_setup.c  asdf_keymap_table.c  asdf_keymap_table.h  test_asdf.c  test_asdf_actions.c  test_asdf_buffer.c  test_asdf_hook.c  test_asdf_keymap_defs.c  test_asdf_keymap_defs.h  test_asdf_keymaps.c  test_asdf_keyslib.c  test_asdf_keyslib.h  test_asdf_lib.c  test_asdf_lib.h  test_asdf_modifiers.c  test_asdf_output.c  test_asdf_print.c  test_asdf_repeat.c  test_asdf_virtual.c  test_keymap_lookup.c  test_keymapdefs.c  test_keymapdefs.h  test_keypress_lib.c
hardware/apple2-encoder/: README.md  apple-encoder-bom.xlsx  apple-encoder.kicad_pcb  apple-encoder.pro  apple-encoder.sch
hardware/common/: mounting-hardware.kicad_sym  unikbd.dcm  unikbd.kicad_sym  unikbd.lib
hardware/documents/: Keyboard_build.html  Keyboard_build.md
hardware/franklin-ace-1000-keyboard/: Franklin ACE 1000 Keyboard.kicad_pcb  Franklin ACE 1000 Keyboard.kicad_prl  Franklin ACE 1000 Keyboard.kicad_pro  Franklin ACE 1000 Keyboard.kicad_sch  README.md
hardware/interface-ascii/: README.md  interface-ascii-bom.xlsx  interface-ascii.kicad_pcb  (+3 more)
hardware/interface-ascii-atmega2560/: Pinouts.sch  README.md  interface-ascii-2560.kicad_pcb  interface-ascii-2560.pro  interface-ascii-2560.sch  interface-ascii.lib
(+139 files in other folders)
